import java.util.List;
import java.util.concurrent.CompletableFuture;
import java.util.concurrent.ExecutorService;
import java.util.concurrent.Executors;
import java.util.concurrent.TimeUnit;
import java.util.stream.Collectors;
import com.github.benmanes.caffeine.cache.Cache;
import com.github.benmanes.caffeine.cache.Caffeine;

class LocationService {
    private final DriverLocationManager locationManager;
    private final ExecutorService locationProcessingExecutor;
    private final Cache<String, List<Driver>> nearbyDriversCache;
    
    public LocationService() {
        this.locationManager = DriverLocationManager.getInstance();
        this.locationProcessingExecutor = Executors.newCachedThreadPool();
        this.nearbyDriversCache = Caffeine.newBuilder()
            .maximumSize(1000)
            .expireAfterWrite(30, TimeUnit.SECONDS)
            .build();
    }
    
    public void updateDriverLocation(String driverId, Location location) {
        locationManager.updateDriverLocation(driverId, location);
        // Invalidate cache for affected areas
        nearbyDriversCache.invalidateAll();
    }
    
    public CompletableFuture<List<Driver>> getNearbyDrivers(Location location, double radiusKm) {
        String cacheKey = String.format("%.6f_%.6f_%.2f", 
            location.latitude, location.longitude, radiusKm);
        
        List<Driver> cached = nearbyDriversCache.getIfPresent(cacheKey);
        if (cached != null) {
            return CompletableFuture.completedFuture(cached);
        }
        
        return CompletableFuture.supplyAsync(() -> {
            List<Driver> nearbyDrivers = locationManager.getAllDriverLocations()
                .entrySet()
                .parallelStream()
                .filter(entry -> calculateDistance(location, entry.getValue()) <= radiusKm)
                .map(entry -> getDriverById(entry.getKey()))
                .filter(driver -> driver != null && driver.status == DriverStatus.AVAILABLE)
                .collect(Collectors.toList());
            
            nearbyDriversCache.put(cacheKey, nearbyDrivers);
            return nearbyDrivers;
        }, locationProcessingExecutor);
    }
    
    private double calculateDistance(Location loc1, Location loc2) {
        // Haversine formula implementation
        return 0.0; // Placeholder
    }
    
    private Driver getDriverById(String driverId) {
        // Implementation to get driver by ID
        return null; // Placeholder
    }
}