enum VehicleType { SEDAN, SUV, HATCHBACK }

class Vehicle {
    String vehicleId, plateNumber;
    VehicleType type; // SEDAN, SUV, HATCHBACK
    String model, color;
}